# whatsapp-automate

./: .env.example  .gitignore  DEPLOY.md  app.jac  jac.toml  login.jac  pyproject.toml  send_now.jac  test.jac  test_generate.jac  test_playwright.py
.jac/data/: main.db  main.db-shm  main.db-wal
src/: main.jac  message_generator.jac  whatsapp_login.jac  whatsapp_sender.jac
templates/: index.html
